--- a/man/gensio.5
+++ b/man/gensio.5
@@ -829,12 +829,15 @@ Force the RTS line to be on or off when the gensio is opened.  See the
 section above for notes on ordering of lines.
 .TP
 .B hangup-when-done[=true|false]
-Lower/don't lower the modem control lines when the gensio is closed.
-The default is not modify the value.  On Unix, this will modify HUPCL
-value set on the termios after close, because there's no other real
-way to do that.  On Windows, it will cause DTR and RTS to be asserted
-on startup and be cleared on close.  By default this is false on
-Windows, since it has no such concept internally.
+When set to true, raise the modem control lines (DTR and possibly RTS)
+when the device is opened, and lower them on close.  This will cause
+DTR to be asserted on open and be cleared on close.  If RTS is not
+assigned with
+.B rtscts
+it will do the same with the RTS line.  Default is to not modify the
+value at startup and inherit the previous value.  If you modify the
+value, the value will be retained after close.  Otherwise it won't
+work properly on close.
 
 On the default for this, it's a integer, -1 means don't set the value,
 0 means turn off, 1 means turn on.
