--- a/man/gensio_event.3
+++ b/man/gensio_event.3
@@ -302,7 +302,8 @@ which can be printed with normal vprintf() and the like.
 These are controls for serial port settings.  These are received on
 the server side only.  It should respond by setting the value (if
 possible and the value isn't zero) and responding with the current
-value with sergensio_xxx().
+value with
+.I gensio_acontrol().
 
 If the server receives a zero value for any of this, it should just
 report the value and not change anything.
@@ -366,7 +367,9 @@ GENSIO_SER_OFF
 .B GENSIO_EVENT_SER_SIGNATURE
 is received on the server side only and is a request for the
 signature.  The server should respond by send the signature
-with sergensio_signature().  No value is passed in this case.
+with
+.I gensio_acontrol().
+No value is passed in this case.
 .SS "STATE FUNCTIONS"
 GENSIO_EVENT_SER_MODEMSTATE_MASK
 .br
@@ -375,10 +378,8 @@ GENSIO_EVENT_SER_LINESTATE_MASK
 These are received on the server side to request updating the mask of
 reported values.  The server should respond by returning the current
 mask with the
-.B sergensio_modemstate
-or
-.B sergensio_linestate
-functions.  The server need not handle all the bits requested by the
+.B gensio_acontrol()
+function.  The server need not handle all the bits requested by the
 user.
 
 GENSIO_EVENT_SER_MODEMSTATE
@@ -386,8 +387,8 @@ GENSIO_EVENT_SER_MODEMSTATE
 GENSIO_EVENT_SER_LINESTATE
 
 On the client side, these are reporting current modemstate and
-linestate changes as an unsigned integer.  See sergensio_modemstate(3)
-and sergensio_linestate(3) for a meaning of the bits in the integer.
+linestate changes as an unsigned integer.  See gensio_acontrol(3)
+for a meaning of the bits in the integer.
 .SS "OTHER SERIAL PORT CONTROLS"
 These are server-only, these are received requesting the various
 operations.  The server should do them, but no response is required.
@@ -403,9 +404,8 @@ sync event is received.  It may be received on both sides.  A server
 should send a break.  The client can do whatever it wants with the
 information, that is not defined by the RFC2217 specification.
 .SH "OTHER EVENTS"
-sergensio gensios have a set of other events, see sergensio(5) for
-details.  Other gensio that are not part of the gensio library proper
-may have their own events, too.
+Other gensio that are not part of the gensio library proper
+may have their own events.
 .SH "RETURN VALUES"
 See the individual events for the values you should return.  If an
 event is not handled by the event handler, the handler must return
@@ -417,4 +417,4 @@ which must be handled.
 .SH "SEE ALSO"
 gensio_set_callback(3), str_to_gensio_child(3), gensio_open_channel(3),
 gensio_open_channel_s(3), gensio_acc_str_to_gensio(3), str_to_gensio(3)
-sergensio(5), gensio_err(3)
+gensio_err(3), gensio_acontrol(3)
