gtlsshd: Fix issues with other_acc and docs
The documentation didn't reflect changes to the sctp configuration,
there is not a "nosctp" option, just an "sctp" option to enable it.
Fix that in various places in the docs.

Allow tcp and sctp to be disabled if other_acc is enabled in gtlsshd.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -126,8 +126,8 @@ passed in via the protocol.  This is different than gtlssh's view of
 interactive, which affects how I/O is done.  This only affects
 prompting for credentials interactively.
 .TP
-.I \-\-nosctp
-Disable SCTP support.
+.I \-\-sctp
+Enable SCTP support.
 .TP
 .I \-\-notcp
 Disable TCP support
